k8s/deploy-web.yml
apiVersion: v1
kind: Deployment
metadata:
  name: dep.dev.api
spec:
  template:
    metadata:
      name: pod.dev.web
      labels:
        service: srv.dev.web
    spec:
      containers:
      - name: ctn.dev.web
        image: modojolaunch/dojolaunch-web
        ports:
        - containerPort: 443
        - containerPort: 80
      imagePullSecrets:
        name: dockerconfig
