k8s/svc-web.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - name: http
    protocol: TCP
    nodePort: 30080
    port: 80
    targetPort: 3000
